# EasyQueue

./: CMakeLists.txt  README.md  equeue
consumer_module/: consumer.cpp  consumer.h
include/: obtain_release.h  queue_core.h  queue_handle_manager.h
producer_module/: producer.cpp  producer.h
src/: main.cpp  queue_core.cpp  queue_handle_manager.cpp
